--- a/NicaEvent/app/build.gradle
+++ b/NicaEvent/app/build.gradle
@@ -25,5 +25,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
+    //Adding the Welcome Library
+    compile 'com.stephentuso:welcome:1.1.0'
     testCompile 'junit:junit:4.12'
 }
