--- a/NicaEvent/app/src/main/AndroidManifest.xml
+++ b/NicaEvent/app/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        //Adding the WelcomeActivity
+        <activity android:name=".MyWelcomeActivity"
+            android:theme="@style/WelcomeScreenTheme"/>
     </application>
 
 </manifest>
